ros_embedded/log/build_2023-06-04_12-47-01/serial_rw/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/pi/ros_embedded/install/serial_rw/lib/python3.10/site-packages/serial_rw/serial_rw.py", line 85
    if pump_alarm != '1'  and water_alarm != '1' &
                                                  ^
SyntaxError: invalid syntax

